# clam

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  index.html  mkdocs.yml  rustfmt.toml
.github/workflows/: ci.yaml  release-please.yaml  release-upload.yaml
benches/: .gitignore  README.md  pixi.toml
benches/workflow/: Snakefile
benches/workflow/data/: ecoli.fna.gz.gzi
benches/workflow/scripts/: plot_benchmarks.py
cli_reference/: index.html
docs/: CommandLineHelp.md  README.md  cli_reference.md  index.md
docs/explanation/: concepts.md  why-clam.md
docs/how-to/: calculate-statistics.md  collect-depth-data.md  generate-callable-loci.md
docs/reference/: cli.md  input-formats.md  output-formats.md
docs/tutorial/: 01_overview.md  02_callable_loci.md  03_clam_stat.md
explanation/concepts/: index.html
explanation/why-clam/: index.html
how-to/calculate-statistics/: index.html
how-to/collect-depth-data/: index.html
how-to/generate-callable-loci/: index.html
notebooks/: per-contig-mean.ipynb
reference/cli/: index.html
reference/input-formats/: index.html
reference/output-formats/: index.html
search/: search_index.json
src/: cli.rs  d4_bgzf.rs  d4_tasks.rs  lib.rs  main.rs  utils.rs
src/collect/: mod.rs
src/core/: contig.rs  depth.rs  mod.rs  population.rs  sample_map.rs  utils.rs  zarr.rs
src/core/depth/: array.rs  d4.rs  gvcf.rs  mod.rs
src/core/loci/: mod.rs
src/loci/: counts.rs  d4_bgzf.rs  d4_tasks.rs  gvcf.rs  io.rs  mod.rs  regions.rs  thresholds.rs
src/stat/: alleles.rs  callable.rs  chunks.rs  config.rs  genotypes.rs  mod.rs  output.rs  roh.rs  utils.rs  vcf.rs  windows.rs  writer.rs
src/stat/vcf/: query.rs  variants.rs
tests/: ci.rs  integration.rs
tests/data/: merged.d4  populations.tsv  truth.bed
tests/data/depth/all20/: merged_s1s2.d4  sample1.g.vcf.gz.tbi  sample2.d4
tests/data/integration/: bcftools.varsonly.vcf.gz.tbi  gatk.varsonly.vcf.gz.tbi  perfect.vcf.gz.tbi  popmap.txt
tests/data/integration/d4/: Pop1_sample_0.per-base.d4.gz.gzi  Pop1_sample_1.per-base.d4.gz.gzi  Pop1_sample_2.per-base.d4.gz.gzi  Pop1_sample_3.per-base.d4.gz.gzi  (+17 more)
tests/data/sim/: 0.bam  0.bam.bai  1.bam  1.bam.bai  2.bam  2.bam.bai  simulation.txt
tests/data/stat/: allsites_filtered.vcf.gz.tbi  callable_sites.bed  callable_sites.bed.gz.tbi  callable_sites.d4  data.ipynb  filtered_vars.vcf.gz.tbi  test_regions.bed  vars_only.vcf  vars_only.vcf.gz.tbi
tests/data/test_pops/: counts.d4  populations.tsv
tutorial/01_overview/: index.html
tutorial/02_callable_loci/: index.html
tutorial/03_clam_stat/: index.html
(+74 files in other folders)
