[package]
name = "clam"
authors = ["Cade Mirchandani <cmirchan@ucsc.edu>"]
repository = "https://github.com/cademirch/clam"
homepage = "https://github.com/cademirch/clam"
version = "0.1.4"
edition = "2021"
[[bin]]
name = "clam"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.91"
bstr = "1.10.0"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
fnv = "1.0.7"
log = "0.4.22"
noodles = { version = "0.89.0", features = ["core", "vcf", "bgzf", "bed", "tabix", "csi"] }
noodles-bgzf = { version = "0.33.0", features = ["libdeflate"] }
serde = { version = "1.0.214", features = ["derive"] }
d4 = {git = "https://github.com/38/d4-format.git"}
rayon = "1.10.0"
tempfile = "3.13.0"
env_logger = "0.11.5"
camino = "1.1.9"
clap-markdown = "0.1.4"
indexmap = "2.6.0"
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
bitvec = "1.0.1"


[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
env_logger = "0.11.5"
uuid = { version = "1.11.0", features = ["v4"] }
rstest = "0.23.0"
