[package]
name = "clam"
authors = ["Cade Mirchandani <cmirchan@ucsc.edu>"]
repository = "https://github.com/cademirch/clam"
homepage = "https://github.com/cademirch/clam"
version = "1.1.0"
edition = "2021"

[lib]
name = "clam"
path = "src/lib.rs"

[[bin]]
name = "clam"
path = "src/main.rs"

[dependencies]
bstr = "1.10.0"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
log = "0.4.22"
noodles = { version = "0.89.0", features = ["core", "vcf", "bgzf", "bed", "tabix", "csi"] }
serde = { version = "1.0.214", features = ["derive"] }
d4 = { git = "https://github.com/cademirch/d4-format.git", default-features = false, features = ["reader_only"] }
rayon = "1.10.0"
tempfile = "3.13.0"
env_logger = "0.11.5"
camino = "1.1.9"
indexmap = "2.6.0"
indicatif = "0.17.9"
rust-lapper = "1.2.0"
color-eyre = { version = "0.6", default-features = false }
serde_json = "1.0"
zarrs = "0.22.8"
ndarray = "0.16"


[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
env_logger = "0.11.5"
uuid = { version = "1.11.0", features = ["v4"] }
rstest = "0.23.0"
glob = "0.3"
